prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/invalid_enum.diag.txt
ERROR: Field 'YELLOW' not found in constant object
testData/diagnostics/compilation_errors/sema_errors/invalid_enum.nut:3:8

enum Color { RED, GREEN, BLUE }
let x = Color.YELLOW
        ^-----------


